--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns-tz": "^1.3.1",
     "easy-peasy": "^5.0.4",
     "email-validator": "^2.0.4",
+    "formik": "^2.2.9",
     "framer-motion": "^6.2.8",
     "fuse.js": "^6.5.3",
     "js-levenshtein": "^1.1.6",
@@ -62,7 +63,9 @@
     "react-window": "^1.8.6",
     "react-window-infinite-loader": "^1.0.7",
     "sscjs": "^0.0.9",
-    "typesense": "^1.2.2"
+    "typesense": "^1.2.2",
+    "uuid": "^9.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@editorjs/simple-image": "^1.4.1",
@@ -77,6 +80,7 @@
     "@types/react-lazyload": "^3.2.0",
     "@types/react-modal": "^3.13.1",
     "@types/react-window-infinite-loader": "^1.0.6",
+    "@types/uuid": "^9.0.0",
     "autoprefixer": "^10.4.0",
     "editorjs-drag-drop": "^1.1.4",
     "editorjs-undo": "^2.0.8",
