--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "react-modal": "^3.15.1",
     "react-resize-detector": "^7.1.2",
     "react-responsive": "^9.0.0-beta.6",
-    "react-simple-image-viewer": "^1.2.2",
     "react-simple-infinite-scroll": "^0.0.1",
     "react-sizeme": "^3.0.2",
     "react-textarea-autosize": "^8.3.4",
@@ -62,6 +61,7 @@
     "react-tooltip": "^4.2.21",
     "react-window": "^1.8.6",
     "react-window-infinite-loader": "^1.0.7",
+    "sib-api-v3-sdk": "^8.4.2",
     "sscjs": "^0.0.9",
     "typesense": "^1.2.2",
     "uuid": "^9.0.0",
